bootstrap-3.1.1-dist/css/stylesheet.css
/*Custom Stylesheet to Work in Conjunction with Bootstrap*/
* {
  font-family: sans-serif;
}

body{
  font-family: sans-serif;
}

#map {
  display: block;
  margin: 30px auto 30px auto;
  width:100%;
  margin-left: auto;
  margin-right: auto;
  border-radius: 15px;
}

.image img{
  margin-left: 15px;
  margin-right: 15px;
  height: 250px;
  width: 400px;
  box-shadow: 3px 3px 5px #192927;
}

.image figcaption{
  margin-left: 40%;
}

.title{
  color: #FFF;
  margin-left: 20px;
}

.content{
  display: block;
  max-width: 1400px;
  background-color: #FFFFFF;
  border-radius: 15px;
  margin-right: auto;
  margin-left: auto;
  margin-top: 20px;
  padding: 1em;
  border-color: #000000;
  border: 2px;
}

.right{
  display: block;
  float: right;
  width: 40%;
  max-width: 50%;
}

.row-even{
  float:left;
}

.row-even img{
    float:right;
    max-width: 75%;
}
.row-even p{
  max-width: 40%;
  font-family: sans-serif;
}

.row-even ul{
  float: left;
  max-width: 40%;
}

.row-even li{
  float: left;
  max-width: 40%;
}

.row-even h5{
  float: right;
  max-width: 40%;
}

/*.row-even h6{
  float: left;
  max-width: 40%;
}*/

.row-odd table{
  float:right;
  max-width: 75%;
}

.row-odd td{
  position: relative;
  font-family: sans-serif;
}

.row-odd img{
  float: left;
  max-width: 75%;
  border-radius: 10px;
  box-shadow: 3px 3px 5px #192927;
}

.row-odd p{
  float:left;
  max-width: 75%;
  padding: 10px;
}

.row-odd ul{
  float: right;
  max-width: 40%;
}

.row-odd li{
  float: right;
  max-width: 40%;
}

/*.row-odd h5{
  float: left;
  max-width: 40%;
  display: block;
}*/

.row-odd h6{
  float: right;
  max-width: 40%;
}

/*--Custom Navbar--*/
.navbar-default {
  background-color: #274822;
  border-color: #032906;
}
.navbar-default .navbar-brand {
  color: #ffffff;
}
.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
  color: #c0c0c0;
}
.navbar-default .navbar-text {
  color: #ffffff;
}
.navbar-default .navbar-nav > li > a {
  color: #ffffff;
}
.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
  color: #c0c0c0;
}
.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
  color: #c0c0c0;
  background-color: #032906;
}
.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
  color: #c0c0c0;
  background-color: #032906;
}
.navbar-default .navbar-toggle {
  border-color: #032906;
}
.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
  background-color: #032906;
}
.navbar-default .navbar-toggle .icon-bar {
  background-color: #ffffff;
}
.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
  border-color: #ffffff;
}
.navbar-default .navbar-link {
  color: #ffffff;
}
.navbar-default .navbar-link:hover {
  color: #c0c0c0;
}

@media (max-width: 767px) {
  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
    color: #ffffff;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
    color: #c0c0c0;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
    color: #c0c0c0;
    background-color: #032906;
  }
}

